# cpp-template

./: .actrc  .clang-format  .clang-tidy  .cmake-format.yaml  .cppcheck-suppressions  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  DEVELOPER_GUIDE-CN.md  DEVELOPER_GUIDE.md  LICENSE  README-CN.md  README.md  SECURITY.md  validate_template.sh  vcpkg.json
.github/workflows/: code-quality.yml  local.yml  pr-local-test.yml  pr-tests.yml  release.yml
cmake/: CodeQuality.cmake  CompilerOptions.cmake  FindCustomLib.cmake  FindSystemDependencies.cmake  GitSubmodulesGuide.md  ManualDependenciesGuide.md  PackagingConfig.cmake  README.md  SystemPackagesGuide.md  VcpkgGuide.md  VcpkgHelpers.cmake  cpp-templateConfig.cmake.in
docs/: CUSTOMIZATION_GUIDE.md  TEMPLATE_USAGE_GUIDE.md  dependency-management-summary.md  system-dependencies.md
examples/: CMakeLists.txt  README.md  basic_core_usage.cpp  config_management_demo.cpp  customization_guide.md  dependency_demo.cpp  modular_architecture_demo.cpp  performance_benchmark.cpp  string_utilities_demo.cpp  third_party_integration.cpp  usage_scenarios.cpp  validation_demo.cpp
include/cpp-template/: core.h  cpp-template.h  cpp-template.hpp  utils.h
include/cpp-template/core/: core.hpp
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/core/: core.h  core.hpp  utils.h
libs/core/include/cpp-template/core/: core.hpp
libs/core/src/: core.cpp  utils.cpp
libs/core/src/platform/: linux_utils.cpp  macos_utils.cpp  windows_utils.cpp
scripts/: check-code.sh  customize-template.sh  deploy_template.sh  format-code.sh  quick_start.sh  replace_placeholders.py  setup-dev-env.sh  setup-pre-commit.sh  test-ci-stability.sh  validate-actions.sh  validate_template.sh
src/: CMakeLists.txt  core_impl.cpp  main.cpp  utils_impl.cpp
src/modules/: CMakeLists.txt  config_manager.cpp  config_manager.h  data_processor.cpp  data_processor.h
src/modules/example/: example_module.cpp  example_module.hpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_application_integration.cpp  test_module_interactions.cpp
tests/unit/: CMakeLists.txt  basic_test.cpp  core_test.cpp  integration_test.cpp  test_core.cpp  test_modules.cpp  utils_test.cpp
